[gd_scene load_steps=3 format=2]

[ext_resource path="res://Asset/Scripts/Spawner.gd" type="Script" id=1]
[ext_resource path="res://Asset/Objects/Character/Slim.tscn" type="PackedScene" id=2]

[node name="Spawner" type="Position2D"]
script = ExtResource( 1 )
monster = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 51.05, 29.55 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
